--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=backend
+
+# jwt.public.key=classpath:app.pub
+# jwt.private.key=classpath:app.key
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+# Adicionar .env
+spring.datasource.url=jdbc:mysql://localhost:3306/aluguei?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
