--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=backend
 
-# jwt.public.key=classpath:app.pub
-# jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
 
 # Adicionar .env
 spring.datasource.url=jdbc:mysql://localhost:3306/aluguei?createDatabaseIfNotExist=true&serverTimezone=UTC
